--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
       - run:
           name: Build Image
           command: |
+            docker ps
             docker build -t $repo"/web:1.1" .
             docker images
 
