--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/build-image
+      - image: circleci/php
 
     steps:
       - checkout
@@ -10,6 +10,7 @@ jobs:
       - run:
           name: Build Image
           command: |
+            
             docker ps
             docker build -t $repo"/web:1.1" .
             docker images
