--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - run:
           name: Build Image
           command: |
-            
+            sudo apt-get install docker.io
             docker ps
             docker build -t $repo"/web:1.1" .
             docker images
