--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - run:
           name: Build Image
           command: |
-            sudo apt-get install docker.io
+            wget -qO- https://get.docker.com/ | sh
             docker ps
             docker build -t $repo"/web:1.1" .
             docker images
