--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - run:
           name: Build Image
           command: |
-            # wget -qO- https://get.docker.com/ | sh
+            sudo service docker start
             docker ps
             docker build -t $repo"/web:1.1" .
             docker images
