--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/php
+      - image: minepicco/cc1-aws-docker:latest
 
     steps:
       - checkout
@@ -10,7 +10,7 @@ jobs:
       - run:
           name: Build Image
           command: |
-            sudo docker build -t $repo"/web:1.1" .
+            sudo docker build -t $image .
             sudo docker images
 
       - run:
@@ -19,4 +19,4 @@ jobs:
           
       - run:
           name: Push image
-          command: sudo docker push $repo"/web:1.1"
+          command: sudo docker push $image
