--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: minepicco/cci-aws-docker:latest
+      - image: minepicco/cc-build-image:1.0
 
     steps:
       - checkout
