--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,6 @@ jobs:
           
       - run:
           name: Push image
-          command: docker push "docker."$jfqdn"web:"$CIRCLE_PROJECT_REPONAME
+          command: docker push "docker."$jfqdn/"web:"$CIRCLE_PROJECT_REPONAME
           
 
