--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,5 +28,5 @@ jobs:
       - run:
           name: JFrogCLI config
           command: |
-            jfrog rt config --user=$user --password=$password --url="https://"$jfqdn"/artifactory" $jid
-            jfrog rt ping
+            /./jfrog rt config --user=$user --password=$password --url="https://"$jfqdn"/artifactory" $jid
+            /./jfrog rt ping
