--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,3 +30,7 @@ jobs:
           command: |
             /./jfrog rt config --user=$user --password=$password --url="https://"$jfqdn"/artifactory" $jid
             /./jfrog rt ping
+      - run:
+          name: JFrogCLI artifact publish
+          command: |
+           /./jfrog rt bp $CIRCLE_PROJECT_REPONAME $CIRCLE_BUILD_NUM
