--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,5 +33,5 @@ jobs:
       - run:
           name: JFrogCLI artifact publish
           command: |
-           /./jfrog rt bec $CIRCLE_PROJECT_REPONAME $CIRCLE_BUILD_NUM
+           /./jfrog rt bce $CIRCLE_PROJECT_REPONAME $CIRCLE_BUILD_NUM
            /./jfrog rt bp $CIRCLE_PROJECT_REPONAME $CIRCLE_BUILD_NUM
